y.output
Terminals unused in grammar

   DO
   CHAR
   DOUBLE
   CONTINUE
   '+'
   '-'
   '*'
   '/'


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON

    8 $@1: %empty

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   10 parameter_list: parameters
   11               | %empty

   12 parameters: parameters COMMA type_specifier ID
   13           | parameters COMMA type_specifier
   14           | type_specifier ID
   15           | type_specifier

   16 compound_statement: LCURL statements RCURL
   17                   | LCURL RCURL

   18 var_declaration: type_specifier declaration_list SEMICOLON

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID

   22 declaration_list: declaration_list COMMA ID
   23                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   24                 | ID
   25                 | ID LTHIRD CONST_INT RTHIRD

   26 statements: statement
   27           | statements statement

   28 statement: var_declaration
   29          | expression_statement
   30          | compound_statement
   31          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   32          | IF LPAREN expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement ELSE statement
   34          | WHILE LPAREN expression RPAREN statement
   35          | PRINTLN LPAREN ID RPAREN SEMICOLON
   36          | RETURN expression SEMICOLON
   37          | RETURN SEMICOLON error

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor

   55 factor: variable
   56       | ID LPAREN argument_list RPAREN
   57       | LPAREN expression RPAREN
   58       | CONST_INT
   59       | CONST_FLOAT
   60       | CONST_CHAR
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | %empty

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
error (256) 37
CONST_INT (258) 23 25 58
CONST_FLOAT (259) 59
CONST_CHAR (260) 60
ID (261) 7 9 12 14 22 23 24 25 35 40 41 56
INCOP (262) 61
DECOP (263) 62
MULOP (264) 51
ADDOP (265) 49 52
RELOP (266) 47
LOGICOP (267) 45
ASSIGNOP (268) 43
LPAREN (269) 7 9 31 32 33 34 35 56 57
RPAREN (270) 7 9 31 32 33 34 35 56 57
RTHIRD (271) 23 25 41
LTHIRD (272) 23 25 41
LCURL (273) 16 17
RCURL (274) 16 17
COMMA (275) 12 13 22 23 65
SEMICOLON (276) 7 18 35 36 37 38 39
NOT (277) 53
IF (278) 32 33
ELSE (279) 33
FOR (280) 31
WHILE (281) 34
DO (282)
INT (283) 19
CHAR (284)
FLOAT (285) 20
DOUBLE (286)
VOID (287) 21
RETURN (288) 36 37
PRINTLN (289) 35
CONTINUE (290)
LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
start (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3, on right: 1 2
unit (44)
    on left: 4 5 6, on right: 2 3
func_declaration (45)
    on left: 7, on right: 5
func_definition (46)
    on left: 9, on right: 6
$@1 (47)
    on left: 8, on right: 9
parameter_list (48)
    on left: 10 11, on right: 7 9
parameters (49)
    on left: 12 13 14 15, on right: 10 12 13
compound_statement (50)
    on left: 16 17, on right: 9 30
var_declaration (51)
    on left: 18, on right: 4 28
type_specifier (52)
    on left: 19 20 21, on right: 7 9 12 13 14 15 18
declaration_list (53)
    on left: 22 23 24 25, on right: 18 22 23
statements (54)
    on left: 26 27, on right: 16 27
statement (55)
    on left: 28 29 30 31 32 33 34 35 36 37, on right: 26 27 31 32 33
    34
expression_statement (56)
    on left: 38 39, on right: 29 31
variable (57)
    on left: 40 41, on right: 43 55 61 62
expression (58)
    on left: 42 43, on right: 31 32 33 34 36 39 41 57
logic_expression (59)
    on left: 44 45, on right: 42 43 65 66
rel_expression (60)
    on left: 46 47, on right: 44 45
simple_expression (61)
    on left: 48 49, on right: 46 47 49
term (62)
    on left: 50 51, on right: 48 49 51
unary_expression (63)
    on left: 52 53 54, on right: 50 51 52 53
factor (64)
    on left: 55 56 57 58 59 60 61 62, on right: 54
argument_list (65)
    on left: 63 64, on right: 56
arguments (66)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 3

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN $@1 compound_statement
   18 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN $@1 compound_statement
   24 declaration_list: ID .
   25                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 24 (declaration_list)


State 14

   18 var_declaration: type_specifier declaration_list . SEMICOLON
   22 declaration_list: declaration_list . COMMA ID
   23                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN $@1 compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 11 (parameter_list)

    parameter_list  go to state 19
    parameters      go to state 20
    type_specifier  go to state 21


State 16

   25 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   22 declaration_list: declaration_list COMMA . ID
   23                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   18 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 18 (var_declaration)


State 19

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@1 compound_statement

    RPAREN  shift, and go to state 24


State 20

   10 parameter_list: parameters .
   12 parameters: parameters . COMMA type_specifier ID
   13           | parameters . COMMA type_specifier

    COMMA  shift, and go to state 25

    $default  reduce using rule 10 (parameter_list)


State 21

   14 parameters: type_specifier . ID
   15           | type_specifier .

    ID  shift, and go to state 26

    $default  reduce using rule 15 (parameters)


State 22

   25 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 27


State 23

   22 declaration_list: declaration_list COMMA ID .
   23                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 28

    $default  reduce using rule 22 (declaration_list)


State 24

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@1 compound_statement

    SEMICOLON  shift, and go to state 29

    $default  reduce using rule 8 ($@1)

    $@1  go to state 30


State 25

   12 parameters: parameters COMMA . type_specifier ID
   13           | parameters COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 31


State 26

   14 parameters: type_specifier ID .

    $default  reduce using rule 14 (parameters)


State 27

   25 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 28

   23 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 32


State 29

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 30

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 33

    compound_statement  go to state 34


State 31

   12 parameters: parameters COMMA type_specifier . ID
   13           | parameters COMMA type_specifier .

    ID  shift, and go to state 35

    $default  reduce using rule 13 (parameters)


State 32

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 36


State 33

   16 compound_statement: LCURL . statements RCURL
   17                   | LCURL . RCURL

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 33
    RCURL        shift, and go to state 43
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 34

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 35

   12 parameters: parameters COMMA type_specifier ID .

    $default  reduce using rule 12 (parameters)


State 36

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 37

   58 factor: CONST_INT .

    $default  reduce using rule 58 (factor)


State 38

   59 factor: CONST_FLOAT .

    $default  reduce using rule 59 (factor)


State 39

   60 factor: CONST_CHAR .

    $default  reduce using rule 60 (factor)


State 40

   40 variable: ID .
   41         | ID . LTHIRD expression RTHIRD
   56 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 65
    LTHIRD  shift, and go to state 66

    $default  reduce using rule 40 (variable)


State 41

   52 unary_expression: ADDOP . unary_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable          go to state 67
    unary_expression  go to state 68
    factor            go to state 64


State 42

   57 factor: LPAREN . expression RPAREN

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 69
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 43

   17 compound_statement: LCURL RCURL .

    $default  reduce using rule 17 (compound_statement)


State 44

   38 expression_statement: SEMICOLON .

    $default  reduce using rule 38 (expression_statement)


State 45

   53 unary_expression: NOT . unary_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable          go to state 67
    unary_expression  go to state 70
    factor            go to state 64


State 46

   32 statement: IF . LPAREN expression RPAREN statement
   33          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 71


State 47

   31 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 72


State 48

   34 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 73


State 49

   36 statement: RETURN . expression SEMICOLON
   37          | RETURN . SEMICOLON error

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 74
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 75
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 50

   35 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 76


State 51

   30 statement: compound_statement .

    $default  reduce using rule 30 (statement)


State 52

   28 statement: var_declaration .

    $default  reduce using rule 28 (statement)


State 53

   18 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 77

    declaration_list  go to state 14


State 54

   16 compound_statement: LCURL statements . RCURL
   27 statements: statements . statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 33
    RCURL        shift, and go to state 78
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 79
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 55

   26 statements: statement .

    $default  reduce using rule 26 (statements)


State 56

   29 statement: expression_statement .

    $default  reduce using rule 29 (statement)


State 57

   43 expression: variable . ASSIGNOP logic_expression
   55 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP     shift, and go to state 80
    DECOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 55 (factor)


State 58

   39 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 59

   42 expression: logic_expression .

    $default  reduce using rule 42 (expression)


State 60

   44 logic_expression: rel_expression .
   45                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 44 (logic_expression)


State 61

   46 rel_expression: simple_expression .
   47               | simple_expression . RELOP simple_expression
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 46 (rel_expression)


State 62

   48 simple_expression: term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 48 (simple_expression)


State 63

   50 term: unary_expression .

    $default  reduce using rule 50 (term)


State 64

   54 unary_expression: factor .

    $default  reduce using rule 54 (unary_expression)


State 65

   56 factor: ID LPAREN . argument_list RPAREN

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    $default  reduce using rule 64 (argument_list)

    variable           go to state 67
    logic_expression   go to state 88
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64
    argument_list      go to state 89
    arguments          go to state 90


State 66

   41 variable: ID LTHIRD . expression RTHIRD

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 91
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 67

   55 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 80
    DECOP  shift, and go to state 81

    $default  reduce using rule 55 (factor)


State 68

   52 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 52 (unary_expression)


State 69

   57 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 92


State 70

   53 unary_expression: NOT unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 71

   32 statement: IF LPAREN . expression RPAREN statement
   33          | IF LPAREN . expression RPAREN statement ELSE statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 93
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 72

   31 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45

    expression_statement  go to state 94
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 73

   34 statement: WHILE LPAREN . expression RPAREN statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 95
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 74

   37 statement: RETURN SEMICOLON . error

    error  shift, and go to state 96


State 75

   36 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 76

   35 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 98


State 77

   24 declaration_list: ID .
   25                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 24 (declaration_list)


State 78

   16 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 16 (compound_statement)


State 79

   27 statements: statements statement .

    $default  reduce using rule 27 (statements)


State 80

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 81

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 82

   43 expression: variable ASSIGNOP . logic_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 67
    logic_expression   go to state 99
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 83

   39 expression_statement: expression SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 84

   45 logic_expression: rel_expression LOGICOP . rel_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 67
    rel_expression     go to state 100
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 85

   49 simple_expression: simple_expression ADDOP . term

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable          go to state 67
    term              go to state 101
    unary_expression  go to state 63
    factor            go to state 64


State 86

   47 rel_expression: simple_expression RELOP . simple_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 67
    simple_expression  go to state 102
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 87

   51 term: term MULOP . unary_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable          go to state 67
    unary_expression  go to state 103
    factor            go to state 64


State 88

   66 arguments: logic_expression .

    $default  reduce using rule 66 (arguments)


State 89

   56 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 104


State 90

   63 argument_list: arguments .
   65 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 105

    $default  reduce using rule 63 (argument_list)


State 91

   41 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 106


State 92

   57 factor: LPAREN expression RPAREN .

    $default  reduce using rule 57 (factor)


State 93

   32 statement: IF LPAREN expression . RPAREN statement
   33          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 107


State 94

   31 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45

    expression_statement  go to state 108
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 95

   34 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 109


State 96

   37 statement: RETURN SEMICOLON error .

    $default  reduce using rule 37 (statement)


State 97

   36 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 36 (statement)


State 98

   35 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 110


State 99

   43 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 43 (expression)


State 100

   45 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 45 (logic_expression)


State 101

   49 simple_expression: simple_expression ADDOP term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 49 (simple_expression)


State 102

   47 rel_expression: simple_expression RELOP simple_expression .
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 47 (rel_expression)


State 103

   51 term: term MULOP unary_expression .

    $default  reduce using rule 51 (term)


State 104

   56 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 56 (factor)


State 105

   65 arguments: arguments COMMA . logic_expression

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 67
    logic_expression   go to state 111
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 106

   41 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 41 (variable)


State 107

   32 statement: IF LPAREN expression RPAREN . statement
   33          | IF LPAREN expression RPAREN . statement ELSE statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 112
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 108

   31 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 45

    variable           go to state 57
    expression         go to state 113
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 109

   34 statement: WHILE LPAREN expression RPAREN . statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 114
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 110

   35 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 115


State 111

   65 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 65 (arguments)


State 112

   32 statement: IF LPAREN expression RPAREN statement .
   33          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 116

    $default  reduce using rule 32 (statement)


State 113

   31 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 117


State 114

   34 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 34 (statement)


State 115

   35 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 35 (statement)


State 116

   33 statement: IF LPAREN expression RPAREN statement ELSE . statement

    CONST_INT    shift, and go to state 37
    CONST_FLOAT  shift, and go to state 38
    CONST_CHAR   shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 44
    NOT          shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    PRINTLN      shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 118
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 117

   31 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
